--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -1,3 +1,5 @@
+@use './global' as *;
+
 .sidebar {
   width: 250px;
   background-color: #f0f0f0;
@@ -20,7 +22,7 @@
 }
 
 .active {
-  background-color: #2a1b61;
+  background-color: $themeColor;
   color: white;
 }
 
