--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,13 +1,13 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
 
-$themeColor :#211D70;
+$themeColor: #211d70;
+$themeBgColor: #d9d9d9;
