--- a/src/styles/Sidebar.module.scss
+++ b/src/styles/Sidebar.module.scss
@@ -1,28 +1,51 @@
-@use './global' as *;
+@use "./global" as *;
 
-.sidebar {
-  width: 250px;
-  background-color: #f0f0f0;
-  padding: 20px;
-}
-
-.menuItem {
+@mixin menuItem {
   display: flex;
   align-items: center;
   gap: 10px;
   padding: 10px;
-  margin: 5px 0;
   text-decoration: none;
-  color: #333;
-  border-radius: 5px;
+  border-radius: 16px;
+  height: 45px;
+  min-height: fit-content;
 }
 
-.menuItem:hover {
-  background-color: #e0e0e0;
-}
+.sidebar {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 
-.active {
-  background-color: $themeColor;
-  color: white;
-}
+  .homebtn {
+    @include menuItem;
+    background-color: $themeBgColor;
+    color: #000000;
+    padding: 15px 22px;
+    height: 59px;
+  }
 
+  .menu {
+    border-radius: 16px;
+    background-color: $themeBgColor;
+    padding: 12px;
+    height: fit-content;
+    .menuItem {
+      @include menuItem;
+      color: #000000;
+    }
+
+    .menuItem:hover {
+      background-color: #e0e0e0;
+    }
+
+    .activeMenuItem {
+      @include menuItem;
+      background-color: $themeColor;
+      color: white;
+      .menuIcon {
+        filter: invert(1);
+      }
+    }
+  }
+}
