--- a/src/global.scss
+++ b/src/global.scss
@@ -21,4 +21,4 @@ body {
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 $themeColor: #211d70;
-$themeBgColor: #d9d9d9;
+$themeBgColor: #D9D9D9;
