UI:MypofileGeneral and some file structuring

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -18,6 +18,8 @@
   gap: 20px;
   font-family: "Inter";
   font-weight: 400;
+  cursor: default;
+  user-select: none;
 
   .homebtn {
     @include menuItem;
