--- a/src/global.scss
+++ b/src/global.scss
@@ -11,14 +11,15 @@ body {
 
 @font-face {
   font-family: "EuropaGroteskReg";
-  src: url("/public/fonts/EuropaGroteskSH-Reg.otf") format("opentype");
+  src: url("/fonts/EuropaGroteskSH-Reg.otf") format("opentype");
 }
 @font-face {
   font-family: "EuropaGroteskMed";
-  src: url("/public/fonts/EuropaGroteskSH-Med.otf") format("opentype");
+  src: url("/fonts/EuropaGroteskSH-Med.otf") format("opentype");
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 $themeColor: #211d70;
-$themeBgColor: #D9D9D9;
+$themeBgColor: #d9d9d9;
+$linkColor: #0061ff;
