UI:MyProfile: Address and Academics

--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1,6 +1,9 @@
-@use "/src/global.scss" as *;
+@use "/src/assets/global.scss" as *;
 
 .content {
   padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   width: 100%;
 }
