--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,15 @@
-@use "./global" as *;
+@use "/src/assets/global" as *;
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
 
 .pageWrapper {
   display: flex;
@@ -6,7 +17,7 @@
   gap: 20px;
   align-items: center;
   width: 100%;
-  margin-top: 22px;
+  margin-top: 22.5px;
   .container {
     display: flex;
 
