--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,4 +1,4 @@
-@use "/src/global" as *;
+@use "/src/assets/global" as *;
 
 @mixin menuItem {
   display: flex;
@@ -26,6 +26,7 @@
     background-color: $themeBgColor;
     color: #000000;
     padding: 15px 22px;
+    height: fit-content;
     .homebtnIcon {
       scale: 0.75;
     }
