Revert "Merge branch 'PJ' of https://github.com/dvm-bitspilani/swd"
This reverts commit 8bb832731c1b08d68dcecfb9873da98acdaa5b54, reversing
changes made to 00a677dfc19a6c99aa16d21b35b19c9dd51ce4e8.

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,6 +7,7 @@
 }
 
 body {
+  margin: 0;
   font-family: Arial, sans-serif;
 }
 
@@ -15,16 +16,16 @@ body {
   flex-direction: column;
   gap: 20px;
   align-items: center;
-  margin: 22.5px;
-
-
+  width: 100%;
+  margin-top: 22.5px;
   .container {
     display: flex;
-    width: 100%;
 
-    .mainContent {
-      display: flex;
-      flex-grow: 1;
-    }
+    width: 97vw;
+  }
+
+  .mainContent {
+    display: flex;
+    flex-grow: 1;
   }
 }
