--- a/src/components/Content/contentPages/Scholarships/scholarshipsSubPage/MCN/MCN.module.scss
+++ b/src/components/Content/contentPages/Scholarships/scholarshipsSubPage/MCN/MCN.module.scss
@@ -52,7 +52,7 @@
           position: absolute;
           top: 100%;
           right: 0%;
-          transform: translate(0%, 0%);
+          transform: translate(0%, 8px);
           width: 250px;
           background-color: #ffffff;
           padding: 10px 21px;
