--- a/src/components/Content/contentPages/Dues/duesSubPages/Deposits/Deposits.module.scss
+++ b/src/components/Content/contentPages/Dues/duesSubPages/Deposits/Deposits.module.scss
@@ -11,8 +11,8 @@
     color: $themeColor;
     text-align: center;
     margin: 0 0 20px 0;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 19.9px;
+    font-weight: 600;
   }
 
   .description {
@@ -25,24 +25,39 @@
 
     .table {
       width: 100%;
-      border-collapse: collapse;
-      background-color: white;
+      border-radius: 4.5px;
+      //   border-collapse: collapse;
+      background-color: #ea9830;
+      //   border: 1px solid #ea9830;
 
       th,
       td {
         padding: 12px;
+        // border: 1px solid #ea9830;
         text-align: center;
-        border: 1px solid #ea9830;
+        font-size: 15px;
       }
 
       th {
         background-color: #ffe17f;
         font-weight: 600;
         color: $themeColor;
+        &:first-child {
+          border-top-left-radius: 4.5px;
+        }
+        &:last-child {
+          border-top-right-radius: 4.5px;
+        }
       }
 
       td {
         background-color: white;
+        &:first-child {
+          border-bottom-left-radius: 4.5px;
+        }
+        &:last-child {
+          border-bottom-right-radius: 4.5px;
+        }
       }
     }
   }
