--- a/src/components/Content/contentPages/Dues/duesSubPages/Deposits/Deposits.module.scss
+++ b/src/components/Content/contentPages/Dues/duesSubPages/Deposits/Deposits.module.scss
@@ -25,15 +25,15 @@
 
     .table {
       width: 100%;
-      border-radius: 4.5px;
-      //   border-collapse: collapse;
-      background-color: #ea9830;
-      //   border: 1px solid #ea9830;
+      border-collapse: separate;
+      border-spacing: 0;
+      border-radius: 5.5px;
+      border: 0.5px solid #ea9830;
 
       th,
       td {
         padding: 12px;
-        // border: 1px solid #ea9830;
+        border: 0.5px solid #ea9830;
         text-align: center;
         font-size: 15px;
       }
