--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -13,3 +13,5 @@ $themeColor: #211d70;
 $themeBgColor: #d9d9d9;
 $linkColor: #0061ff;
 $inputBgColor: #f4f4f4;
+$tableHeaderBgColor: #FFE17F;
+$tableBorderColor: #ea9830;
