--- a/src/components/Content/contentPages/Clubs/HealthClub/HealthClub.module.scss
+++ b/src/components/Content/contentPages/Clubs/HealthClub/HealthClub.module.scss
@@ -39,24 +39,19 @@
         flex: 1;
 
         label {
-          // display: inline;
           margin-right: 10px;
           font-weight: 500;
         }
 
         select {
-          width: 60%;
-          padding: 8px;
+          padding: 0px 10px;
+          font-size: 16.5px;
+          height: 30px;
+          width: 300px;
           border: none;
-          border-radius: 4px;
-          background-color: white;
-          font-size: 14px;
-
-          &:focus {
-            outline: none;
-            border-color: $themeColor;
-            box-shadow: 0 0 0 2px rgba(26, 35, 126, 0.1);
-          }
+          border-radius: 4.5px;
+          background-color: $inputBgColor;
+          font-family: "inter";
         }
       }
     }
