--- a/src/components/Content/contentPages/Clubs/YogaClub/YogaClub.module.scss
+++ b/src/components/Content/contentPages/Clubs/YogaClub/YogaClub.module.scss
@@ -30,17 +30,14 @@
       gap: 1rem;
 
       .select {
+        padding: 0px 10px;
+        font-size: 16.5px;
+        height: 30px;
         width: 350px;
-        padding: 0.5rem;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: white;
-        font-size: 15px;
-        outline: none;
-
-        &:focus {
-          border-color: $themeColor;
-        }
+        border: none;
+        border-radius: 4.5px;
+        background-color: $inputBgColor;
+        font-family: "inter";
       }
     }
     .submitButton {
