--- a/src/components/Content/contentPages/Certificates/Certificates.module.scss
+++ b/src/components/Content/contentPages/Certificates/Certificates.module.scss
@@ -1,13 +1,13 @@
 @use "/src/assets/global.scss" as *;
 
-.certificates {
+.uploadPhotoForIdCard {
   font-family: "inter";
-  .selectCertificate {
+  .uploadPhoto {
     padding: 25.5px 45px;
     border-radius: 22.5px;
     background-color: $themeBgColor;
 
-    .certificateForm {
+    .photoForm {
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -18,13 +18,14 @@
         color: $themeColor;
         font-weight: 600;
       }
-      .selOptsContainer {
+      .uploadPhotoContainer {
         .certificateDropdown {
           font-size: 18.75px;
           padding: 8px 18px;
           width: 420px;
           border: none;
           border-radius: 4.5px;
+          background-color: $inputBgColor;
         }
       }
     }
