--- a/src/components/Content/contentPages/TravelConcessions/travelConcessionsSubPages/TravelComponent/TravelComponent.module.scss
+++ b/src/components/Content/contentPages/TravelConcessions/travelConcessionsSubPages/TravelComponent/TravelComponent.module.scss
@@ -56,6 +56,24 @@
     }
   }
 
+  input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: $themeBgColor;
+    border: 2px solid #525252;
+    border-radius: 4px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    accent-color: $themeColor;
+
+    &:checked {
+      appearance: auto;
+      background-color: $themeColor;
+    }
+  }
+
   .checkBoxContainer {
     display: flex;
     flex-direction: column;
@@ -67,6 +85,8 @@
       align-items: center;
       gap: 5px;
       transition: background-color 0.2s;
+      padding: 5px;
+      border-radius: 5px;
 
       &:hover {
         background-color: rgba(26, 35, 126, 0.05);
