--- a/src/components/Content/contentPages/Clubs/HealthClub/HealthClub.module.scss
+++ b/src/components/Content/contentPages/Clubs/HealthClub/HealthClub.module.scss
@@ -6,7 +6,7 @@
   .card {
     background-color: $themeBgColor;
     border-radius: 22.5px;
-    padding: 24px;
+    padding: 25.5px 45px;
     margin-bottom: 24px;
     font-size: 18px;
     display: flex;
