--- a/src/components/Content/contentPages/Clubs/SportsFacilities/SportsFacilities.module.scss
+++ b/src/components/Content/contentPages/Clubs/SportsFacilities/SportsFacilities.module.scss
@@ -4,7 +4,7 @@
   font-family: "Inter", sans-serif;
   background-color: $themeBgColor;
   border-radius: 22.5px;
-  padding: 24px;
+  padding: 25.5px 45px;
   margin-bottom: 24px;
   font-size: 18px;
   display: flex;
