--- a/src/components/Content/contentPages/RAF/RAF.module.scss
+++ b/src/components/Content/contentPages/RAF/RAF.module.scss
@@ -23,10 +23,9 @@
         color: $themeColor;
         font-weight: 600;
       }
-      .info{
+      .info {
         font-size: 19.9px;
         font-weight: 500;
-
       }
       .selOptsContainer {
         .certificateDropdown {
@@ -35,6 +34,7 @@
           width: 420px;
           border: none;
           border-radius: 4.5px;
+          background-color: $inputBgColor;
         }
       }
     }
@@ -61,8 +61,8 @@
       font-size: 18.75px;
       color: $themeColor;
     }
-    .appliedCerti{
-      span{
+    .appliedCerti {
+      span {
         font-weight: 500;
       }
     }
