--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -13,5 +13,7 @@ $themeColor: #211d70;
 $themeBgColor: #d9d9d9;
 $linkColor: #0061ff;
 $inputBgColor: #f4f4f4;
-$tableHeaderBgColor: #FFE17F;
+$tableHeaderBgColor: #ffe17f;
 $tableBorderColor: #ea9830;
+$hoverStateColor: #b3b3b3;
+$bodyColor: #efefef;
