--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -7,12 +7,12 @@
   padding: 10px;
   text-decoration: none;
   border-radius: 16px;
-  height: 45px;
+  height: 25px;
   min-height: fit-content;
 }
 
 .sidebar {
-  width: 300px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -46,7 +46,7 @@
     }
 
     .menuItem:hover {
-      background-color: #b3b3b3;
+      background-color: $hoverStateColor;
     }
 
     .activeMenuItem {
